fix: scrollbar gutter causing x overflow on chrome

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -157,3 +157,7 @@
 @utility font-mono {
     font-family: var(--font-mono);
 }
+
+html {
+    scrollbar-gutter: stable;
+}
